--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,12 +6,21 @@
 
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Catjong"
+        <activity android:name=".Main"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+           <activity android:name=".Catjong"
+                  android:label="@string/app_name">
+          
+        </activity>
+        
+          <activity android:name=".Options"
+                  android:label="@string/app_name">
+          
         </activity>
 
     </application>
