--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,14 @@
         </activity>
            <activity android:name=".Catjong"
                   android:label="@string/app_name">
-          
         </activity>
         
           <activity android:name=".Options"
                   android:label="@string/app_name">
-          
+        </activity>
+        
+         <activity android:name=".SelectBoard"
+                  android:label="@string/app_name">
         </activity>
 
     </application>
